# crud-course-management

./: README.md
.github/workflows/: backend.yml
crud_flask/: .dockerignore  .env  Dockerfile  MANIFEST.in  Makefile  docker-compose.yml  mock_dump.py  pyproject.toml  pytest.ini  requirements.txt  requirements_test.txt  run_tests.sh
crud_flask/crud_flask/: __init__.py  models.py
crud_flask/crud_flask/models/: models.py
crud_flask/crud_flask/routes/: __init__.py  course_routes.py
crud_flask/crud_flask/services/: course_service.py
crud_flask/migrations/versions/: 205d630eaa19_alter_table_add_date_created.py  48302f7bdc0a_update_length_name_lesson.py  91302a481080_initial_migration.py
crud_flask/tests/: conftest.py  test_constants.py  test_course_service.py
crud_react/: package-lock.json  package.json
crud_react/src/: App.tsx  main.tsx
crud_react/src/components/: CourseForm.tsx  CourseTable.tsx  Layout.tsx  ModalDelete.tsx
crud_react/src/components/course-form/: index.tsx
crud_react/src/components/course-table/: index.tsx
crud_react/src/components/input/: index.tsx
crud_react/src/components/modal-delete-confirm/: index.tsx
crud_react/src/components/pagination/: index.tsx
crud_react/src/hooks/: useHttp.tsx  useToastNotifier.tsx
crud_react/src/hooks/utils/: useHttp.tsx
crud_react/src/interfaces/: category.enum.ts  course-form-data.d.ts  course-form.d.ts  course.d.ts  status.enum.ts
crud_react/src/pages/: CourseCreate.tsx  CourseEdit.tsx  CourseList.tsx  Courses.tsx  CoursesList.tsx
crud_react/src/routes/: AppRoutes.tsx  route-list.tsx
(+13 files in other folders)
